k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fs-search
  labels:
    name: fs-search
    app: fs-search
